# delonghi-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yaml  release-please.yaml
config/: beverages.toml  properties.toml
docs/: protocol.md  reverse-engineering-guide.md
src/delonghi_mcp/: __init__.py  __main__.py  api.py  ayla_client.py  cli.py  config.py  exceptions.py  formatting.py  models.py  protocol.py  server.py
tests/: conftest.py  test_api.py  test_auth_integration.py  test_ayla_client.py  test_cli.py  test_config.py  test_protocol.py  test_server.py
