[project]
name = "delonghi-mcp"
version = "0.4.0"
description = "MCP server for controlling De'Longhi Eletta Explore coffee maker via Ayla IoT"
readme = "README.md"
authors = [
    { name = "synthe102", email = "leonard@suslian.engineer" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
delonghi-mcp = "delonghi_mcp.__main__:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: hits real Ayla API (requires DELONGHI_* env vars)"]
addopts = "-m 'not integration'"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.22", "ruff>=0.11", "ty>=0.0.1a7"]
